[package]
name = "nom_etf"
version = "0.1.0"
authors = ["Clark Kampfe <clark.kampfe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
num-bigint = "0.3"

[dev-dependencies]
criterion = "0.3"

[profile.bench]
codegen-units = 1
lto = true

[[bench]]
name = "bench"
harness = false